Support multi-word commands